--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <h1>Made with ❤️ by Arun Suryan</h1>
     <div class="wrapper clearfix">
         <div class="player-0-panel active">
             <div class="player-name" id="name-0">Player 1</div>
